# Infernal

./: Modelfile  README.md  infernal.py  pyproject.toml  requirements.txt
tests/: test_benchmark.py  test_cli.py  test_inference.py  test_integration.py  test_model_managenent.py  test_modelfile_parsing.py
