[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infernal"
version = "1.0.0"
description = "A lightweight local LLM inference and benchmarking tool with finetuning capabilities"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["llm", "inference", "benchmarking", "finetuning", "local", "ai"]
authors = [
    {name = "Infernal Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "huggingface-hub>=0.15.0",
    "llama-cpp-python>=0.2.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "peft>=0.4.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.39.0",
    "tqdm>=4.65.0",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/infernal"
"Bug Reports" = "https://github.com/yourusername/infernal/issues"
"Source" = "https://github.com/yourusername/infernal"

[project.scripts]
infernal = "infernal:cli"

[tool.hatch.build.targets.wheel]
packages = ["infernal.py"]
